DevSecOps/security/policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow latest image tag
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: no-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - demo-dev
      validate:
        message: "Image tag ':latest' is forbidden — use sha-<git> digests/tags"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
