DevSecOps/security/policies/kyverno/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root-readonly
  annotations:
    policies.kyverno.io/title: Require non-root and read-only root filesystem
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - demo-dev
      validate:
        message: "Containers must set runAsNonRoot, readOnlyRootFilesystem, allowPrivilegeEscalation=false, drop ALL caps, seccomp RuntimeDefault"
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
              seccompProfile:
                type: RuntimeDefault
            containers:
              - securityContext:
                  runAsNonRoot: true
                  allowPrivilegeEscalation: false
                  readOnlyRootFilesystem: true
                  capabilities:
                    drop: ["ALL"]
